Rename and refactor menu * Rename menu to KCTrainerV. * Rename some menu files and function names.
* Move main menu into Menus folder
* Add PlayerScript and VehicleScript

* Add project directory to include directories for C++.
* Update readme, and add my name to the license.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+# Old readme, can be found here: https://github.com/ikt32/GTAVMenuExample/blob/master/README.md
+README-old.md
+
 # User-specific files
 *.rsuser
 *.suo
