--- a/KCTrainerV-menu/KCTrainerV.vcxproj
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj
@@ -14,7 +14,7 @@
     <ProjectGuid>{71D4C2A8-9E78-47A8-A2B7-3FB2DE014D27}</ProjectGuid>
     <RootNamespace>InversePower</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>GTAVMenuExample</ProjectName>
+    <ProjectName>KCTrainerV</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
@@ -69,7 +69,7 @@
       <PreprocessorDefinitions>WIN32_LEAN_AND_MEAN;NOMINMAX;NOGDI;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
-      <AdditionalIncludeDirectories>$(SolutionDir)thirdparty\ScriptHookV_SDK;$(SolutionDir)thirdparty;$(SolutionDir)thirdparty\GTAVMenuBase\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)thirdparty\ScriptHookV_SDK;$(SolutionDir)thirdparty;$(SolutionDir)thirdparty\GTAVMenuBase\;$(ProjectDir)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
@@ -81,6 +81,9 @@
     <PreBuildEvent>
       <Command>copy /b $(ProjectDir)DllMain.cpp +,,</Command>
     </PreBuildEvent>
+    <PostBuildEvent>
+      <Command>xcopy /y "$(TargetPath)" "D:\SteamLibrary\steamapps\common\Grand Theft Auto V\"</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -113,10 +116,12 @@
     <ClCompile Include="..\thirdparty\GTAVMenuBase\menuutils.cpp" />
     <ClCompile Include="DllMain.cpp" />
     <ClCompile Include="ImageDimensions.cpp" />
-    <ClCompile Include="MenuExampleScript.cpp" />
+    <ClCompile Include="KCMenuScript.cpp" />
+    <ClCompile Include="Menus\KCMainMenu.cpp" />
     <ClCompile Include="MenuTexture.cpp" />
     <ClCompile Include="Script.cpp" />
-    <ClCompile Include="MenuExampleMenu.cpp" />
+    <ClCompile Include="Scripts\PlayerScripts.cpp" />
+    <ClCompile Include="Scripts\VehicleScripts.cpp" />
     <ClCompile Include="Util\Logger.cpp" />
     <ClCompile Include="Util\Paths.cpp" />
     <ClCompile Include="Util\UI.cpp" />
@@ -138,10 +143,12 @@
     <ClInclude Include="..\thirdparty\simpleini\SimpleIni.h" />
     <ClInclude Include="Constants.hpp" />
     <ClInclude Include="ImageDimensions.hpp" />
-    <ClInclude Include="MenuExampleScript.hpp" />
+    <ClInclude Include="KCMenuScript.hpp" />
     <ClInclude Include="MenuTexture.hpp" />
     <ClInclude Include="Script.hpp" />
     <ClInclude Include="ScriptMenu.hpp" />
+    <ClInclude Include="Scripts\PlayerScripts.h" />
+    <ClInclude Include="Scripts\VehicleScripts.h" />
     <ClInclude Include="Util\Logger.hpp" />
     <ClInclude Include="Util\Paths.hpp" />
     <ClInclude Include="Util\UI.hpp" />
