Add some items to menu
Added pch.h, this project doesn't use precompiled headers just yet.

Added libraries:
* MinHook, shv-extras, Patterns.

Added some files from the Chaos mod
Fix spacing for most brackets, switch to format I like to use.

KCMenuScript.cpp changes:
* Add playerScripts as an intance for future use.

KCMainMenu.cpp changes:
* Add natives and EntityIterator.h to includes.
* Add instance of PlayerScripts for use within the menu.
* Add kill all peds option to menu,

Add some debug and toggle preprocessors to Constants.hpp

Updates to PlayerScripts.cpp:
* Add toggle invincibility, and toggle never wanted functions.
* Add set wanted level function.
* Fix up SetPlayerCoords function to work with a location specified by an enum.
* Move some items into the class for using stuff that isn't static.
* Label most items in the PlayerScripts files.

Updates to PlayerScripts.h:
* Add natives to includes.
* Add teleport locations enum, and PlayerScripts instance.
* Add extras from PlayerScripts.cpp.

Add credits to readme.

--- a/KCTrainerV-menu/KCTrainerV.vcxproj.filters
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj.filters
@@ -44,6 +44,27 @@
     <ClCompile Include="Menus\KCMainMenu.cpp">
       <Filter>Menus</Filter>
     </ClCompile>
+    <ClCompile Include="Memory\Memory.cpp">
+      <Filter>Memory</Filter>
+    </ClCompile>
+    <ClCompile Include="..\thirdparty\Patterns\Patterns.cpp">
+      <Filter>ThirdParty\Patterns</Filter>
+    </ClCompile>
+    <ClCompile Include="..\thirdparty\minhook\src\buffer.c">
+      <Filter>ThirdParty\MinHook</Filter>
+    </ClCompile>
+    <ClCompile Include="..\thirdparty\minhook\src\hook.c">
+      <Filter>ThirdParty\MinHook</Filter>
+    </ClCompile>
+    <ClCompile Include="..\thirdparty\minhook\src\trampoline.c">
+      <Filter>ThirdParty\MinHook</Filter>
+    </ClCompile>
+    <ClCompile Include="..\thirdparty\minhook\src\hde\hde64.c">
+      <Filter>ThirdParty\MinHook\hde</Filter>
+    </ClCompile>
+    <ClCompile Include="..\thirdparty\minhook\src\hde\hde32.c">
+      <Filter>ThirdParty\MinHook\hde</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Script.hpp" />
@@ -111,6 +132,49 @@
     <ClInclude Include="Scripts\PlayerScripts.h">
       <Filter>Scripts</Filter>
     </ClInclude>
+    <ClInclude Include="Memory\Memory.h">
+      <Filter>Memory</Filter>
+    </ClInclude>
+    <ClInclude Include="Memory\Hooks\Hook.h">
+      <Filter>Memory\Hooks</Filter>
+    </ClInclude>
+    <ClInclude Include="Memory\Handle.h">
+      <Filter>Memory</Filter>
+    </ClInclude>
+    <ClInclude Include="..\thirdparty\Patterns\Patterns.h">
+      <Filter>ThirdParty\Patterns</Filter>
+    </ClInclude>
+    <ClInclude Include="..\thirdparty\minhook\src\buffer.h">
+      <Filter>ThirdParty\MinHook</Filter>
+    </ClInclude>
+    <ClInclude Include="..\thirdparty\minhook\src\trampoline.h">
+      <Filter>ThirdParty\MinHook</Filter>
+    </ClInclude>
+    <ClInclude Include="..\thirdparty\minhook\src\hde\hde64.h">
+      <Filter>ThirdParty\MinHook\hde</Filter>
+    </ClInclude>
+    <ClInclude Include="..\thirdparty\minhook\src\hde\pstdint.h">
+      <Filter>ThirdParty\MinHook\hde</Filter>
+    </ClInclude>
+    <ClInclude Include="..\thirdparty\minhook\src\hde\table32.h">
+      <Filter>ThirdParty\MinHook\hde</Filter>
+    </ClInclude>
+    <ClInclude Include="..\thirdparty\minhook\src\hde\table64.h">
+      <Filter>ThirdParty\MinHook\hde</Filter>
+    </ClInclude>
+    <ClInclude Include="..\thirdparty\minhook\src\hde\hde32.h">
+      <Filter>ThirdParty\MinHook\hde</Filter>
+    </ClInclude>
+    <ClInclude Include="..\thirdparty\minhook\include\MinHook.h">
+      <Filter>ThirdParty\MinHook</Filter>
+    </ClInclude>
+    <ClInclude Include="pch.h" />
+    <ClInclude Include="Util\EntityIterator.h">
+      <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\Hash.h">
+      <Filter>Util</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Util">
@@ -142,6 +206,21 @@
     </Filter>
     <Filter Include="Menus">
       <UniqueIdentifier>{13fc97c3-2114-4e78-974f-f0d85301829b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Memory">
+      <UniqueIdentifier>{cf362074-7ec9-4e9b-b0f7-1c398ee1e2ce}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Memory\Hooks">
+      <UniqueIdentifier>{53116e90-fc0e-4031-a36f-a0ef76e341c4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ThirdParty\Patterns">
+      <UniqueIdentifier>{6fec0dd4-61fc-40b7-b8b7-502890996bcf}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ThirdParty\MinHook">
+      <UniqueIdentifier>{0a469d00-90b6-40ac-8255-6270b5010eca}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ThirdParty\MinHook\hde">
+      <UniqueIdentifier>{8350350a-9364-44de-8788-7c34701de901}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
