--- a/KCTrainerV-menu/KCTrainerV.vcxproj
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj
@@ -114,9 +114,16 @@
     <ClCompile Include="..\thirdparty\GTAVMenuBase\menumemutils.cpp" />
     <ClCompile Include="..\thirdparty\GTAVMenuBase\menusettings.cpp" />
     <ClCompile Include="..\thirdparty\GTAVMenuBase\menuutils.cpp" />
+    <ClCompile Include="..\thirdparty\minhook\src\buffer.c" />
+    <ClCompile Include="..\thirdparty\minhook\src\hde\hde32.c" />
+    <ClCompile Include="..\thirdparty\minhook\src\hde\hde64.c" />
+    <ClCompile Include="..\thirdparty\minhook\src\hook.c" />
+    <ClCompile Include="..\thirdparty\minhook\src\trampoline.c" />
+    <ClCompile Include="..\thirdparty\Patterns\Patterns.cpp" />
     <ClCompile Include="DllMain.cpp" />
     <ClCompile Include="ImageDimensions.cpp" />
     <ClCompile Include="KCMenuScript.cpp" />
+    <ClCompile Include="Memory\Memory.cpp" />
     <ClCompile Include="Menus\KCMainMenu.cpp" />
     <ClCompile Include="MenuTexture.cpp" />
     <ClCompile Include="Script.cpp" />
@@ -135,6 +142,15 @@
     <ClInclude Include="..\thirdparty\GTAVMenuBase\menusettings.h" />
     <ClInclude Include="..\thirdparty\GTAVMenuBase\menuutils.h" />
     <ClInclude Include="..\thirdparty\GTAVMenuBase\Scaleform.h" />
+    <ClInclude Include="..\thirdparty\minhook\include\MinHook.h" />
+    <ClInclude Include="..\thirdparty\minhook\src\buffer.h" />
+    <ClInclude Include="..\thirdparty\minhook\src\hde\hde32.h" />
+    <ClInclude Include="..\thirdparty\minhook\src\hde\hde64.h" />
+    <ClInclude Include="..\thirdparty\minhook\src\hde\pstdint.h" />
+    <ClInclude Include="..\thirdparty\minhook\src\hde\table32.h" />
+    <ClInclude Include="..\thirdparty\minhook\src\hde\table64.h" />
+    <ClInclude Include="..\thirdparty\minhook\src\trampoline.h" />
+    <ClInclude Include="..\thirdparty\Patterns\Patterns.h" />
     <ClInclude Include="..\thirdparty\ScriptHookV_SDK\inc\enums.h" />
     <ClInclude Include="..\thirdparty\ScriptHookV_SDK\inc\main.h" />
     <ClInclude Include="..\thirdparty\ScriptHookV_SDK\inc\nativeCaller.h" />
@@ -144,11 +160,17 @@
     <ClInclude Include="Constants.hpp" />
     <ClInclude Include="ImageDimensions.hpp" />
     <ClInclude Include="KCMenuScript.hpp" />
+    <ClInclude Include="Memory\Handle.h" />
+    <ClInclude Include="Memory\Hooks\Hook.h" />
+    <ClInclude Include="Memory\Memory.h" />
     <ClInclude Include="MenuTexture.hpp" />
+    <ClInclude Include="pch.h" />
     <ClInclude Include="Script.hpp" />
     <ClInclude Include="ScriptMenu.hpp" />
     <ClInclude Include="Scripts\PlayerScripts.h" />
     <ClInclude Include="Scripts\VehicleScripts.h" />
+    <ClInclude Include="Util\EntityIterator.h" />
+    <ClInclude Include="Util\Hash.h" />
     <ClInclude Include="Util\Logger.hpp" />
     <ClInclude Include="Util\Paths.hpp" />
     <ClInclude Include="Util\UI.hpp" />
