Updates to project * Add instances for most classes, make booleans and ints easierr to access between classes.
* Added new test menu

* Add airstrike test and draw to screen text, can be toggled in the test menu

* Add extra items to game tick for running airstrikes and drawing text.

* Disable logging menu open and displaying menu open messages.
* Disable loading of images for menu for now.

* Add natives2.cpp and natives2.h from Menyoo

KCMainMenu changes:
* Add player menu, ped menu, world menu, and test menu.
* Add toggles for heat vision and night vision.
* Add tests for notifications, starting/stopping arena war music, and starting/stopping the credits music.

* Add test for an airstrike, runs in a loop if toggled on
* Add repair vehicle, and spawn cheetah option
* Add option to set all peds as cops.
* Add blow up all vehicles option.
* Remove old menus and cleanup file a bit.

* Add some more files from the Chaos Mod, add Util.cpp, and Util.hpp from GTAVAddonLoader.

VehicleScripts changes:
* Add get player vehicle, repair vehicle, and spawn vehicle options
* Make instance of VehicleScripts.

Other changes:
* Add TextScripts which can draw text to the screen.
* Update PlayerScripts with new features.
* Add PedScripts, and MiscScripts.

* Add LuaScripts for future testing from Chaos Mod.
* Add TeleLocations.h from Menyoo for future use.

* Relicense project from MIT to GPLV3, rename old license to menubase_LICENSE.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 # Old readme, can be found here: https://github.com/ikt32/GTAVMenuExample/blob/master/README.md
 README-old.md
 
+# Old script file
+KCTrainerV-menu/Menus/OldMenus.cpp
+
 # User-specific files
 *.rsuser
 *.suo
