--- a/KCTrainerV-menu/KCTrainerV.vcxproj
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj
@@ -120,18 +120,25 @@
     <ClCompile Include="..\thirdparty\minhook\src\hook.c" />
     <ClCompile Include="..\thirdparty\minhook\src\trampoline.c" />
     <ClCompile Include="..\thirdparty\Patterns\Patterns.cpp" />
+    <ClCompile Include="Components\LuaScripts.cpp" />
     <ClCompile Include="DllMain.cpp" />
     <ClCompile Include="ImageDimensions.cpp" />
     <ClCompile Include="KCMenuScript.cpp" />
     <ClCompile Include="Memory\Memory.cpp" />
     <ClCompile Include="Menus\KCMainMenu.cpp" />
+    <ClCompile Include="Menus\OldMenus.cpp" />
     <ClCompile Include="MenuTexture.cpp" />
+    <ClCompile Include="Natives\natives2.cpp" />
     <ClCompile Include="Script.cpp" />
+    <ClCompile Include="Scripts\MiscScripts.cpp" />
+    <ClCompile Include="Scripts\PedScripts.cpp" />
     <ClCompile Include="Scripts\PlayerScripts.cpp" />
+    <ClCompile Include="Scripts\TextScripts.cpp" />
     <ClCompile Include="Scripts\VehicleScripts.cpp" />
     <ClCompile Include="Util\Logger.cpp" />
     <ClCompile Include="Util\Paths.cpp" />
     <ClCompile Include="Util\UI.cpp" />
+    <ClCompile Include="Util\Util.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\thirdparty\GTAVMenuBase\InstructionalButton.h" />
@@ -157,6 +164,7 @@
     <ClInclude Include="..\thirdparty\ScriptHookV_SDK\inc\natives.h" />
     <ClInclude Include="..\thirdparty\ScriptHookV_SDK\inc\types.h" />
     <ClInclude Include="..\thirdparty\simpleini\SimpleIni.h" />
+    <ClInclude Include="Components\LuaScripts.h" />
     <ClInclude Include="Constants.hpp" />
     <ClInclude Include="ImageDimensions.hpp" />
     <ClInclude Include="KCMenuScript.hpp" />
@@ -164,16 +172,23 @@
     <ClInclude Include="Memory\Hooks\Hook.h" />
     <ClInclude Include="Memory\Memory.h" />
     <ClInclude Include="MenuTexture.hpp" />
+    <ClInclude Include="Natives\natives2.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Script.hpp" />
     <ClInclude Include="ScriptMenu.hpp" />
+    <ClInclude Include="Scripts\MiscScripts.h" />
+    <ClInclude Include="Scripts\PedScripts.h" />
     <ClInclude Include="Scripts\PlayerScripts.h" />
+    <ClInclude Include="Scripts\TextScripts.h" />
     <ClInclude Include="Scripts\VehicleScripts.h" />
+    <ClInclude Include="Teleports\TeleLocation.h" />
     <ClInclude Include="Util\EntityIterator.h" />
     <ClInclude Include="Util\Hash.h" />
     <ClInclude Include="Util\Logger.hpp" />
     <ClInclude Include="Util\Paths.hpp" />
+    <ClInclude Include="Util\Random.h" />
     <ClInclude Include="Util\UI.hpp" />
+    <ClInclude Include="Util\Util.hpp" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="..\thirdparty\ScriptHookV_SDK\lib\ScriptHookV.lib" />
