Update readme in subfolder, change keybind to F10

--- a/GTAV_dir/KCTrainerV/settings_menu.ini
+++ b/GTAV_dir/KCTrainerV/settings_menu.ini
@@ -1,5 +1,7 @@
 ﻿[MENU]
-MenuKey = F9
+; Menyoo Spooner mode conflicts with F9
+; MenuKey = F9
+MenuKey = F10
 MenuUp = UP
 MenuDown = DOWN
 MenuLeft = LEFT
