Updates to project Changes to KCMenuScript: * Add proper invincibility toggle * Add never wanted toggle
Changes to KCMainMenu:
* Add teleport menu as a sub menu in the main menu.
* Add toggle for player invincibility and never wanted
* Add teleport to airport, display coordinates on screen.
* Add debug option for changing position of the coordinates displayed on screen.

* Add debug teleport menu as a sub menu.
* Move sub menu test to the bottom

Changes to PlayerScripts:
* Remove extra booleans.
* Add GetPlayerCoords, and GetPlayerHeading functions.
* Add EnableNeverWanted and DisableNeverWanted functions.
* Add some more teleport locations to header, not used yet.
* Add booleans and some flags for options which run in the tick of KCMenuScript.cpp.

Changes to TextScripts:
* Add a seperate function for drawing to screen with custom X and Y values.
* Add coordinates display option, draws player coordinates to screen with positions, can be set in the debug submenu within the teleport menu.

Other changes:
* Add project source directory to includes path in Release build.
* Add DEBUG_MODE preprocessor into Constants.hpp.

--- a/KCTrainerV-menu/KCTrainerV.vcxproj
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj
@@ -93,7 +93,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <FloatingPointModel>Fast</FloatingPointModel>
       <WarningLevel>Level3</WarningLevel>
-      <AdditionalIncludeDirectories>$(SolutionDir)thirdparty\ScriptHookV_SDK;$(SolutionDir)thirdparty;$(SolutionDir)thirdparty\GTAVMenuBase\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)thirdparty\ScriptHookV_SDK;$(SolutionDir)thirdparty;$(SolutionDir)thirdparty\GTAVMenuBase\;$(ProjectDir)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
