Updates to project * Add FileFunctions * Add SaveCoordinatesToFile and TeleportToSavedCoords functions into FileFunctions.
PlayerScripts changes:
* Rename WarpPlayerCoords to SetPlayerCoords, move up with other teleport functions.
* Rename SetPlayerCoords to WarpToLocation.
* Add separate function for setting the player heading, SetPlayerHeading

KCMainMenu changes:
* Add Save coordinates to file option, and Teleport to saved coordinates option in the teleport menu.

Other changes:
* Add some more headers to pch.h, update headers in MiscScripts.cpp
* Add coordsFileName into Constants.hpp

--- a/KCTrainerV-menu/KCTrainerV.vcxproj.filters
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj.filters
@@ -86,6 +86,9 @@
     <ClCompile Include="Scripts\MiscScripts.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="Util\FileFunctions.cpp">
+      <Filter>Util</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Script.hpp" />
@@ -219,6 +222,9 @@
     </ClInclude>
     <ClInclude Include="Scripts\MiscScripts.h">
       <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="Util\FileFunctions.h">
+      <Filter>Util</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
