--- a/KCTrainerV-menu/KCTrainerV.vcxproj
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="Scripts\PlayerScripts.cpp" />
     <ClCompile Include="Scripts\TextScripts.cpp" />
     <ClCompile Include="Scripts\VehicleScripts.cpp" />
+    <ClCompile Include="Util\FileFunctions.cpp" />
     <ClCompile Include="Util\Logger.cpp" />
     <ClCompile Include="Util\Paths.cpp" />
     <ClCompile Include="Util\UI.cpp" />
@@ -183,6 +184,7 @@
     <ClInclude Include="Scripts\VehicleScripts.h" />
     <ClInclude Include="Teleports\TeleLocation.h" />
     <ClInclude Include="Util\EntityIterator.h" />
+    <ClInclude Include="Util\FileFunctions.h" />
     <ClInclude Include="Util\Hash.h" />
     <ClInclude Include="Util\Logger.hpp" />
     <ClInclude Include="Util\Paths.hpp" />
