Updates to project
Added TeleportLocations files:
* Add better teleport handling into TeleportLocations.
* Move teleport enums and vectors into TeleportLocations.

Script.cpp changes:
* Add GetTeleportLocations to script init for loading the teleport locations.

PlayerScripts changes:
* Add logger, TeleportToLocation function.
* Remove switch statement for WarpToLocation function, clean it up a bit.
* Disable TeleportLocations in the header.
* Rename usages of TeleportLocations enum to TeleportLocation

KCMainMenu changes:
* Move teleport locations into locations sub menu.
* Add hospital rooftop teleport, and rename TeleportLocations enum to TeleportLocation.

--- a/KCTrainerV-menu/KCTrainerV.vcxproj.filters
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj.filters
@@ -89,6 +89,9 @@
     <ClCompile Include="Util\FileFunctions.cpp">
       <Filter>Util</Filter>
     </ClCompile>
+    <ClCompile Include="Teleports\TeleportLocations.cpp">
+      <Filter>Teleports</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Script.hpp" />
@@ -225,6 +228,9 @@
     </ClInclude>
     <ClInclude Include="Util\FileFunctions.h">
       <Filter>Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Teleports\TeleportLocations.h">
+      <Filter>Teleports</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
