--- a/KCTrainerV-menu/KCTrainerV.vcxproj
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="Scripts\PlayerScripts.cpp" />
     <ClCompile Include="Scripts\TextScripts.cpp" />
     <ClCompile Include="Scripts\VehicleScripts.cpp" />
+    <ClCompile Include="Teleports\TeleportLocations.cpp" />
     <ClCompile Include="Util\FileFunctions.cpp" />
     <ClCompile Include="Util\Logger.cpp" />
     <ClCompile Include="Util\Paths.cpp" />
@@ -186,6 +187,7 @@
     <ClInclude Include="Scripts\TextScripts.h" />
     <ClInclude Include="Scripts\VehicleScripts.h" />
     <ClInclude Include="Teleports\TeleLocation.h" />
+    <ClInclude Include="Teleports\TeleportLocations.h" />
     <ClInclude Include="Util\EntityIterator.h" />
     <ClInclude Include="Util\FileFunctions.h" />
     <ClInclude Include="Util\Hash.h" />
