--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "thirdparty/simpleini"]
 	path = thirdparty/simpleini
 	url = https://github.com/brofield/simpleini
+[submodule "thirdparty/sol"]
+	path = thirdparty/sol
+	url = https://github.com/ThePhD/sol2.git
